# Windows-Agent

./: .gitignore  README.md  prompt_file.txt  pyproject.toml
%USERPROFILE%/Desktop/: agent.md
notebooks/: admin.ipynb  audio.ipynb  base_tool.py  display.ipynb  file_manager.ipynb  network.ipynb  powertool.ipynb  process_manager.ipynb  test.json
notes/: Welcome to Markdown.md
src/agent/conversations/: context_builder.py  conversation_manager.py
src/agent/events/: event.py  event_bus.py  event_handler.py  event_types.py
src/agent/executor/: config.py  exceptions.py  executor.py  test.py  validator.py
src/agent/llm/: base_llm.py  langchain_llm.py  llm_config.py  llm_factory.py  llm_response.py  test.py
src/agent/messages/: messages.py
src/agent/models/: action.py  planner_result.py
src/agent/observer/: observation_validator.py  observer.py  observer_config.py  observer_context.py  test.py  world_updater.py
src/agent/planner/: action_validator.py  output_parser.py  planner.py  planner_config.py  planner_exception.py  planner_output.py  planner_prompt.py  test.py
src/agent/prompts/: test.py
src/agent/reasoner/: reasoner.py  reasoner_config.py  reasoner_output.py  reasoner_validator.py
src/agent/recovery/: recovery.py  recovery_config.py  recovery_validator.py  test.py
src/agent/reflection/: reflection.py  reflection_config.py  reflection_validator.py  test.py
src/agent/runtime/: execution_stage.py  observation_stage.py  planning_stage.py  recovery_stage.py  reflection_stage.py  runtime.py  runtime_builder.py  runtime_config.py  runtime_context.py  (+4 more)
(+76 files in other folders)
