[project]
name = "windows-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comtypes>=1.4.16",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "playwright>=1.61.0",
    "pycaw>=20251023",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pyttsx3>=2.99",
    "pywin32>=312",
    "screen-brightness-control>=0.27.2",
    "screeninfo>=0.8.1",
    "winshell>=0.6",
]
