[project]
name = "windows-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "comtypes>=1.4.16",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.13",
    "langchain-ollama>=1.1.0",
    "libcst>=1.8.6",
    "playwright>=1.61.0",
    "pycaw>=20251023",
    "pydantic>=2.13.4",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pytest>=9.1.1",
    "pyttsx3>=2.99",
    "pywin32>=312",
    "rope>=1.14.0",
    "ruff>=0.15.20",
    "screen-brightness-control>=0.27.2",
    "screeninfo>=0.8.1",
    "winshell>=0.6",
]
